--- a/src/assets/styles/projects.scss
+++ b/src/assets/styles/projects.scss
@@ -27,6 +27,43 @@
                     color: #2C90A8;
                     font-weight: 700;
                 }
+                p {
+                    font-size: 1.2rem;
+                }
+                &:hover {
+                    color: #2C90A8;
+                }
+            }
+        }
+        .right_two {
+            background-color: white;
+            border-radius: 1rem;
+            width: 25%;
+            padding-top: 2rem;
+            span {
+                opacity: 0.6;
+                cursor: pointer;
+                margin: 1rem;
+                display: flex;
+                align-items: center;
+                gap: 0.6rem;
+            }
+            h3 {
+                margin-left: 1rem;
+                color: #2C90A8;
+                font-size: 1.5rem;
+            }
+            .regionInfo {
+                p {
+                    margin-top: -0.3rem;
+                    text-align: center;
+                    font-size: 1.3rem;
+                    opacity: 0.6;
+                    cursor: pointer;
+                    &:hover {
+                        color: #2C90A8;
+                    }
+                }
             }
         }
     }
