--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -161,7 +161,8 @@
         }
     }
     .projects {
-        width: 100%;
+        width: 95%;
+        margin: 0 auto;
         &__content {
             display: flex;
             flex-direction: column;
@@ -174,6 +175,25 @@
             }
             .right {
                 width: 100%;
+            }
+            .right_two {
+                width: 100%;
+            }
+        }
+        .projectInfo {
+            width: 95%;
+            margin: 0 auto;
+            margin-bottom: 3rem;
+            .second {
+                // background-color: red;
+                div {
+                    width: 100%;
+                    img {
+                        margin: 0 auto;
+                        width: 100%;
+                        height: 95%;
+                    }
+                }
             }
         }
     }
@@ -611,6 +631,12 @@
             .right {
                 width: 100%;
             }
+            .right_two {
+                width: 100%;
+            }
+        }
+        .projectInfo {
+            .second {}
         }
     }
     .catalogy {
@@ -632,8 +658,9 @@
                     }
                 }
                 &__text {
-                    width: 100%;
-                    padding-left: 2%;
+                    width: 90%;
+                    // padding-left: 2%;
+                    margin: 0 auto;
                 }
             }
         }
