--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -169,8 +169,10 @@
             padding-left: 3%;
             gap: 3rem;
             .left {
-                img {
+                width: 100%;
+                svg {
                     height: 16rem;
+                    width: 100%;
                 }
             }
             .right {
@@ -185,14 +187,8 @@
             margin: 0 auto;
             margin-bottom: 3rem;
             .second {
-                // background-color: red;
-                div {
-                    width: 100%;
-                    img {
-                        margin: 0 auto;
-                        width: 100%;
-                        height: 95%;
-                    }
+                img {
+                    height: 2.5rem;
                 }
             }
         }
@@ -251,6 +247,9 @@
     .partners {
         width: 100%;
         &__cards {
+            margin: 0 auto;
+            width: 85%;
+            margin-top: 3rem;
             div {
                 width: 100%;
             }
@@ -281,6 +280,9 @@
     .service {
         min-width: 100%;
         &__content {
+            // background-color: red;
+            max-width: 90%;
+            margin: 0 auto;
             &__right {
                 width: 100%;
                 height: 15rem;
@@ -311,14 +313,16 @@
         &__about {
             width: 95%;
             &__left {
+                width: 100%;
                 div {
                     justify-content: center;
                     span {
-                        width: 90%;
+                        width: 80%;
                         text-align: center;
                     }
                 }
                 p {
+                    font-size: 1.2rem;
                     margin-left: 7%;
                 }
             }
@@ -400,7 +404,7 @@
             }
         }
         &__managers {
-            width: 90%;
+            width: 92%;
             display: flex;
             flex-direction: column;
         }
@@ -624,7 +628,9 @@
             padding-left: 3%;
             gap: 3rem;
             .left {
-                img {
+                width: 100%;
+                svg {
+                    width: 100%;
                     height: 28rem;
                 }
             }
@@ -636,7 +642,14 @@
             }
         }
         .projectInfo {
-            .second {}
+            width: 95%;
+            margin: 0 auto;
+            margin-bottom: 3rem;
+            .second {
+                img {
+                    height: 5rem;
+                }
+            }
         }
     }
     .catalogy {
@@ -692,6 +705,9 @@
     .partners {
         width: 100%;
         &__cards {
+            width: 90%;
+            margin: 0 auto;
+            margin-top: 3rem;
             div {
                 width: 45%;
             }
@@ -848,7 +864,7 @@
             }
         }
         &__managers {
-            width: 90%;
+            width: 95%;
             display: flex;
             flex-direction: column;
         }
