--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -58,8 +58,9 @@
     .home {
         &__header {
             padding-bottom: 7vw;
+            padding-left: 5%;
             div {
-                width: 95%;
+                width: 100%;
                 h1 {
                     line-height: 11vw;
                     font-size: 8vw;
@@ -205,14 +206,19 @@
                     width: 95%;
                     margin: 0 auto;
                     gap: 1rem;
+                    margin-top: -3rem;
                     img {
                         height: 21rem;
                         width: 100%;
                     }
                 }
                 &__text {
-                    width: 80%;
+                    width: 90%;
                     margin: 0 auto;
+                    p {
+                        word-break: break-all;
+                        width: 100%;
+                    }
                 }
             }
         }
